# Mammut

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: follow_profile.rs  print_profile.rs  print_your_profile.rs  register.rs  search.rs  upload_photo.rs
src/: apps.rs  errors.rs  lib.rs  macros.rs  media_builder.rs  page.rs  registration.rs  status_builder.rs
src/entities/: account.rs  attachment.rs  card.rs  context.rs  instance.rs  itemsiter.rs  list.rs  mention.rs  mod.rs  notification.rs  pageiter.rs  relationship.rs  report.rs  search_result.rs  status.rs
src/requests/: mod.rs  statuses.rs
tests/: account1.json  account2.json  deserialization.rs  upload_photo.rs
