[package]
name = "mammut"
version = "0.13.0"
edition = "2018"

description = "A wrapper around the Mastodon API."
authors = ["Aaron Power <theaaronepower@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Aaronepower/mammut.git"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "http-client"]

[dependencies]
doc-comment = "0.3"
reqwest = "0.9"
hyperx = "0.15"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "1"
log = "0.4.6"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
toml = "0.5"
